[gd_scene load_steps=16 format=3 uid="uid://b713tk2qmdpnl"]

[ext_resource type="Texture2D" uid="uid://dkxilr5sharr1" path="res://assets/Enemies/Boss/BossDeath.png" id="1_ohfn0"]
[ext_resource type="Script" path="res://scenes/boss.gd" id="1_x1y2i"]
[ext_resource type="PackedScene" uid="uid://koyohndapjkm" path="res://scenes/enemy_bullet_3.tscn" id="2_1im3l"]
[ext_resource type="Texture2D" uid="uid://dwnwqym6a8gwf" path="res://assets/Enemies/Boss/Boss.png" id="2_i2hlp"]
[ext_resource type="PackedScene" uid="uid://bnikedhv02xi6" path="res://scenes/missile.tscn" id="3_pebpm"]
[ext_resource type="Script" path="res://scenes/lof_boss.gd" id="5_w0btc"]
[ext_resource type="Script" path="res://scenes/lof_boss_2.gd" id="6_lfy7j"]
[ext_resource type="Script" path="res://scenes/lof_boss_3.gd" id="7_st5dq"]
[ext_resource type="Script" path="res://scenes/lof_boss_4.gd" id="8_qbdsu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_83ryb"]
radius = 75.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0pst6"]
bg_color = Color(0, 0, 0, 0.65098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijnna"]
bg_color = Color(0.905254, 0, 0.0149213, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78o4w"]
size = Vector2(150, 150)

[sub_resource type="CircleShape2D" id="CircleShape2D_a42nh"]
radius = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_ab3gc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ohfn0")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i2hlp")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i2hlp")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[node name="Boss" type="CharacterBody2D" groups=["boss", "enemies"]]
z_index = 6
collision_layer = 4
script = ExtResource("1_x1y2i")
enemy_bullet = ExtResource("2_1im3l")
enemy_missile = ExtResource("3_pebpm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_83ryb")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="EnemyHealthBar" type="ProgressBar" parent="."]
offset_left = -112.0
offset_top = -165.0
offset_right = 113.0
offset_bottom = -120.0
theme_override_styles/background = SubResource("StyleBoxFlat_0pst6")
theme_override_styles/fill = SubResource("StyleBoxFlat_ijnna")
max_value = 500.0
value = 500.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1.90735e-06)
shape = SubResource("RectangleShape2D_78o4w")

[node name="OutOfBoundsChecker" type="Area2D" parent="." groups=["out_of_bounds_checker"]]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBoundsChecker"]
shape = SubResource("CircleShape2D_a42nh")

[node name="RotatingSection" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="RotatingSection"]
position = Vector2(1.52588e-05, 1.52588e-05)
sprite_frames = SubResource("SpriteFrames_ab3gc")
animation = &"idle"

[node name="LineOfFire" type="RayCast2D" parent="RotatingSection"]
position = Vector2(0, -75)
enabled = false
target_position = Vector2(500, 0)
collision_mask = 3
script = ExtResource("5_w0btc")

[node name="BurnTimer" type="Timer" parent="RotatingSection/LineOfFire"]
one_shot = true

[node name="HitTimer2" type="Timer" parent="RotatingSection/LineOfFire"]

[node name="Line2D" type="Line2D" parent="RotatingSection/LineOfFire"]
z_index = -1
points = PackedVector2Array(0, 0, 500, 0)
width = 0.0

[node name="LineOfFire2" type="RayCast2D" parent="RotatingSection"]
position = Vector2(0, -75)
enabled = false
target_position = Vector2(-500, 0)
collision_mask = 3
script = ExtResource("6_lfy7j")

[node name="BurnTimer" type="Timer" parent="RotatingSection/LineOfFire2"]
one_shot = true

[node name="HitTimer2" type="Timer" parent="RotatingSection/LineOfFire2"]

[node name="Line2D" type="Line2D" parent="RotatingSection/LineOfFire2"]
z_index = -1
points = PackedVector2Array(0, 0, -500, 0)
width = 0.0

[node name="LineOfFire3" type="RayCast2D" parent="RotatingSection"]
position = Vector2(0, 75)
enabled = false
target_position = Vector2(500, 0)
collision_mask = 3
script = ExtResource("7_st5dq")

[node name="BurnTimer" type="Timer" parent="RotatingSection/LineOfFire3"]
one_shot = true

[node name="HitTimer2" type="Timer" parent="RotatingSection/LineOfFire3"]

[node name="Line2D" type="Line2D" parent="RotatingSection/LineOfFire3"]
z_index = -1
points = PackedVector2Array(0, 0, 500, 0)
width = 0.0

[node name="LineOfFire4" type="RayCast2D" parent="RotatingSection"]
position = Vector2(0, 75)
enabled = false
target_position = Vector2(-500, 0)
collision_mask = 3
script = ExtResource("8_qbdsu")

[node name="BurnTimer" type="Timer" parent="RotatingSection/LineOfFire4"]
one_shot = true

[node name="HitTimer2" type="Timer" parent="RotatingSection/LineOfFire4"]

[node name="Line2D" type="Line2D" parent="RotatingSection/LineOfFire4"]
z_index = -1
points = PackedVector2Array(0, 0, -500, 0)
width = 0.0

[node name="EntranceTimer" type="Timer" parent="."]
autostart = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="TrackTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AbilityCoolDownTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AbilityTimer" type="Timer" parent="."]
one_shot = true

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.075

[node name="MissileTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="RotatingSection/LineOfFire/BurnTimer" to="RotatingSection/LineOfFire" method="_on_burn_timer_timeout"]
[connection signal="timeout" from="RotatingSection/LineOfFire/HitTimer2" to="RotatingSection/LineOfFire" method="_on_hit_timer_2_timeout"]
[connection signal="timeout" from="RotatingSection/LineOfFire2/BurnTimer" to="RotatingSection/LineOfFire2" method="_on_burn_timer_timeout"]
[connection signal="timeout" from="RotatingSection/LineOfFire2/HitTimer2" to="RotatingSection/LineOfFire2" method="_on_hit_timer_2_timeout"]
[connection signal="timeout" from="RotatingSection/LineOfFire3/BurnTimer" to="RotatingSection/LineOfFire3" method="_on_burn_timer_timeout"]
[connection signal="timeout" from="RotatingSection/LineOfFire3/HitTimer2" to="RotatingSection/LineOfFire3" method="_on_hit_timer_2_timeout"]
[connection signal="timeout" from="RotatingSection/LineOfFire4/BurnTimer" to="RotatingSection/LineOfFire4" method="_on_burn_timer_timeout"]
[connection signal="timeout" from="RotatingSection/LineOfFire4/HitTimer2" to="RotatingSection/LineOfFire4" method="_on_hit_timer_2_timeout"]
[connection signal="timeout" from="EntranceTimer" to="." method="_on_entrance_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="TrackTimer" to="." method="_on_track_timer_timeout"]
[connection signal="timeout" from="AbilityCoolDownTimer" to="." method="_on_ability_cool_down_timer_timeout"]
[connection signal="timeout" from="AbilityTimer" to="." method="_on_ability_timer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="MissileTimer" to="." method="_on_missile_timer_timeout"]
